Closed Bug 1831414 Opened 1 year ago Closed 1 year ago

Gradient not correctly rendered with `gfx.canvas.accelerated` set to `true`

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

VERIFIED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- wontfix
firefox113 --- wontfix
firefox114 --- verified
firefox115 --- verified

People

(Reporter: calixte, Assigned: lsalzman)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(3 files)

Attached file issue16309.pdf

STR:

  • set gfx.canvas.accelerated to true;
  • open the attached pdf.

The white part of the gradient is on the left but it should be centered.

Flags: needinfo?(lsalzman)

Set release status flags based on info from the regressing bug 1770088

Component: PDF Viewer → Graphics: Canvas2D
Product: Firefox → Core

Can confirm reproducing on my end on Windows 11 in Nightly. The issue goes away when gfx.canvas.accelerated is enabled.

Summary: Shading pattern not correct rendered with gfx.canvas.accelerated set to true → Gradient not correctly rendered with `gfx.canvas.accelerated` set to `true`

Regression
Bug 1799402 - Use WGR to rasterize paths in DrawTargetWebgl. r=jrmuizel

Blocks: 1770088
Regressed by: 1799402
No longer regressed by: 1770088
Attached file about:support
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/54c7de2b6843
Ensure patterns get transformed when using WGR. r=aosmond,gfx-reviewers,ahale
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
Flags: needinfo?(lsalzman)

I'm inclined to let this fix ride the trains to release, but feel free to nominate for release approval if you feel that it should go into a dot release.

Flags: qe-verify+

Reproducible on a 2023-05-06 Nightly build on macOS 12.
Verified as fixed on Firefox 114.0b2(build ID: 20230509180058) and Nightly 115.0a1(build ID: 20230510094206) on macOS 12, Windows 10, Ubuntu 22.
The white part of the gradient is now centered.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
No longer blocks: gfx-triage
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: