Bug 1831414 - Ensure patterns get transformed when using WGR. r=aosmond,gfx-reviewers,ahale

Differential Revision: https://phabricator.services.mozilla.com/D177342